# my-notes

algorithms/: build.gradle
algorithms/src/main/java/org/amw061/interview/: BinarySearch.java  PatternMatching.java  QuickSort.java  ReverseInteger.java
algorithms/src/main/java/org/amw061/interview/divide_conquer/: MergeSort.java
algorithms/src/main/java/org/amw061/interview/dynamic_programming/: Fibonacci.java  KnapsackProblem.java  SubsetSumProblem.java
algorithms/src/main/java/org/amw061/interview/sorting/: InsertionSort.java
algorithms/src/test/java/org/amw061/interview/: BinarySearchTest.java  PatternMatchingTest.java  QuickSortTest.java  ReverseIntegerTest.java
algorithms/src/test/java/org/amw061/interview/divide_conquer/: MergeSortTest.java
algorithms/src/test/java/org/amw061/interview/sorting/: InsertionSortTest.java
python/: .gitignore  pyproject.toml
python/data/: spreadsheet.xlsx
python/python/: pandas_eval.py  stock_analysis.py
