[project]
name = "python"
version = "0.1.0"
description = ""
authors = [
    { name = "Your Name", email = "you@example.com" }
]
readme = "README.md"
package-mode = false
requires-python = ">=3.11"

dependencies = [
    "pandas (>=2.3.2,<3.0.0)",
    "openpyxl (>=3.1.5,<4.0.0)",
    "jinja2 (>=3.1.6,<4.0.0)",
    "pandas-stubs (>=2.3.2.250827,<3.0.0.0)",
    "matplotlib (>=3.10.6,<4.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
